crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__close_tag_space_before_end.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>x</p >"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 5,
                            },
                        },
                        value: Text(
                            "x",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
